--- a/5 Term/Data Bases coursework/src/sql/configDataBase.json
+++ b/5 Term/Data Bases coursework/src/sql/configDataBase.json
@@ -1,1 +1,1 @@
-{"host": "localhost", "port": 3306, "user": "root", "password": "1234", "db": "testing plan"}
+{"host": "localhost", "port": 3306, "user": "root", "password": "1234", "db": "lab_schema"}
