5 Term Data Bases Lab1.5 reformat code

--- a/5 Term/Data Bases/Labs/Lab1.5/config/access_config.json
+++ b/5 Term/Data Bases/Labs/Lab1.5/config/access_config.json
@@ -1,11 +1,17 @@
 {
   "Пользователь": [
-    "auth", "requests", ""
+    "auth",
+    "requests",
+    ""
   ],
   "Администратор": [
-    "auth", "requests", "reports", ""
+    "auth",
+    "requests",
+    "reports",
+    ""
   ],
   "Гость": [
-    "auth", ""
+    "auth",
+    ""
   ]
 }
