--- a/5 Term/Data Bases coursework/src/config/db_config.json
+++ b/5 Term/Data Bases coursework/src/config/db_config.json
@@ -2,6 +2,6 @@
   "host": "localhost",
   "port": 3306,
   "user": "root",
-  "password": "1234",
+  "password": "dish0311",
   "db": "lab_schema"
 }
